// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`useSelectionManager returns an object with function to manage selections 1`] = `
{
  "current": {
    "clear": [Function],
    "deselect": [Function],
    "reset": [Function],
    "select": [Function],
    "selection": [],
    "set": [Function],
    "toggle": [Function],
  },
}
`;

exports[`useSelectionManager withGroups true adds an item from the selection when calling select 1`] = `
{
  "clear": [Function],
  "deselect": [Function],
  "reset": [Function],
  "select": [Function],
  "selection": {
    "group1": [
      1,
      2,
      3,
      4,
    ],
    "group2": [
      42,
      12,
      23,
      34,
      45,
    ],
  },
  "set": [Function],
  "toggle": [Function],
}
`;

exports[`useSelectionManager withGroups true removes an item from the selection when calling deselect 1`] = `
{
  "clear": [Function],
  "deselect": [Function],
  "reset": [Function],
  "select": [Function],
  "selection": {
    "group1": [
      1,
      3,
      4,
    ],
    "group2": [
      12,
      23,
      34,
      45,
    ],
  },
  "set": [Function],
  "toggle": [Function],
}
`;

exports[`useSelectionManager withGroups true returns an object with function to manage selections with groups 1`] = `
{
  "clear": [Function],
  "deselect": [Function],
  "reset": [Function],
  "select": [Function],
  "selection": {
    "group1": [
      1,
      2,
      3,
      4,
    ],
    "group2": [
      12,
      23,
      34,
      45,
    ],
  },
  "set": [Function],
  "toggle": [Function],
}
`;

exports[`useSelectionManager withGroups true sets items for a selection when calling set 1`] = `
{
  "clear": [Function],
  "deselect": [Function],
  "reset": [Function],
  "select": [Function],
  "selection": {
    "group1": [
      0,
      9,
      8,
      45,
      3,
    ],
    "group2": [
      12,
      23,
      34,
      45,
    ],
  },
  "set": [Function],
  "toggle": [Function],
}
`;

exports[`useSelectionManager withGroups: false adds an item from the selection when calling select 1`] = `
{
  "clear": [Function],
  "deselect": [Function],
  "reset": [Function],
  "select": [Function],
  "selection": [
    42,
    1,
    2,
    3,
    4,
  ],
  "set": [Function],
  "toggle": [Function],
}
`;

exports[`useSelectionManager withGroups: false removes an item from the selection when calling deselect 1`] = `
{
  "clear": [Function],
  "deselect": [Function],
  "reset": [Function],
  "select": [Function],
  "selection": [
    1,
    2,
    4,
  ],
  "set": [Function],
  "toggle": [Function],
}
`;

exports[`useSelectionManager withGroups: false returns an object with function to manage selections wihtout groups 1`] = `
{
  "clear": [Function],
  "deselect": [Function],
  "reset": [Function],
  "select": [Function],
  "selection": [
    1,
    2,
    3,
    4,
  ],
  "set": [Function],
  "toggle": [Function],
}
`;

exports[`useSelectionManager withGroups: false sets items for a selection when calling set 1`] = `
{
  "clear": [Function],
  "deselect": [Function],
  "reset": [Function],
  "select": [Function],
  "selection": [
    0,
    9,
    8,
    45,
    3,
  ],
  "set": [Function],
  "toggle": [Function],
}
`;
